--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,13 @@ body{
     position:relative;
 }
 
+.choice{
+    padding:2px;
+    width:25px;
+    margin:4px;
+    margin-right:20px;
+}
+
 .hide {
     display: none;
   }
