--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,12 @@
 }
 
 body{
-    background-color: #556;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#505060+33,303040+100 */
+    background: #505060; /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover,  #505060 33%, #303040 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover,  #505060 33%,#303040 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center,  #505060 33%,#303040 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#505060', endColorstr='#303040',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 #timerBar{
@@ -24,6 +29,13 @@ body{
     width:30px;
     margin:4px;
     margin-right:20px;
+}
+
+.correct{
+    box-shadow:0px 0px 40px #0f0;
+}
+.wrong{
+    box-shadow:0px 0px 40px #f00;
 }
 
 .hide {
