--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ body{
     box-shadow:0px 0px 40px #f00;
 }
 
+.correctAns{
+    background:#9f9;
+}
+.wrongChoice{
+    background:#f99;
+}
 .hide {
     display: none;
   }
